FIX: fixed overflow bug from conversion of togglebutton to buttongroup

--- a/src/pages/QuizSummary.scss
+++ b/src/pages/QuizSummary.scss
@@ -71,8 +71,10 @@ $summaryTitleHeight: calc($mediumFontSize + ($sectionSpacing / 2));
                 row-gap: 0.75rem;
                 width: 100%;
                 
+                $approxButtonHeight: calc(2rem + $buttonShadowHeight + $padding);
+                $approximateButtonGroupHeight: calc($approxButtonHeight + ($buttonGroupPadding * 2));
                 &.topic-is-kana {
-                    max-height: calc(100% - $sectionSpacing);
+                    max-height: calc(100% - $approximateButtonGroupHeight - $sectionSpacing);
                 }
                 
                 .kana-selections-container {
